--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   dio: ^4.0.6
   flutter_staggered_grid_view: ^0.6.1
   shared_preferences: ^2.0.15
+  firebase_analytics: ^9.1.9
+  firebase_core: ^1.17.1
 
 dev_dependencies:
   flutter_test:
